fix tech badge on small screens

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -199,11 +199,6 @@ section {
 	padding: 1.5rem 0;
 }
 
-.logo-img {
-	height: auto;
-	width: 75%;
-}
-
 // FOOTER
 #footer {
 	background-color: $secondary-color;
